--- a/README.Rmd
+++ b/README.Rmd
@@ -42,7 +42,9 @@ library(yaml)
 
 questions <- read_csv("questions.csv.gz", progress = FALSE)
 question_tags <- read_csv("question_tags.csv.gz", progress = FALSE)
+```
 
+```{r cache = FALSE}
 s <- yaml.load_file("status.yml")
 ```
 
